use first name and last name as required inputs. Full name is just lastname, firstname and add to manager portlet more query options
git-svn-id: http://svn.aei.mpg.de/eScience/GridSphere/trunk@5334 9c99c85f-4d0c-0410-8460-a9a1c48a3a7f